# napari-sediment

./: .buildinfo  .gitignore  Details_sediment.html  Dimensionality_reduction.html  Installation.html  LICENSE  README.md  Spectral_indices.html  genindex.html  index.html  napari_sediment.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
_sources/: Dimensionality_reduction.ipynb  Spectral_indices.ipynb
book/: Dimensionality_reduction.ipynb  Dimensionality_reduction_imports_adapted.ipynb  Spectral_indices.ipynb  Spectral_indices_imports_adapted.ipynb  _toc.yml
src/napari_sediment/: __init__.py  _reader.py  batch_indices.py  batch_preproc.py  batch_preproc_widget.py  batch_widget.py  channel_widget.py  classifier.py  convert_widget.py  folder_list_widget.py  hyperanalysis.py  hyperanalysis_widget.py  imchannels.py  io.py  napari.yaml  parameters.py  parameters_indices.py  parameters_plots.py  rgb_widget.py  sediment_widget.py  sediproc.py  spectral_indices_widget.py  spectralindex.py  spectralplot.py  utils.py
src/napari_sediment/_tests/: test_a_load_preprocess.py  test_c_indices.py  test_reader.py  test_sediment_widget.py  test_widget.py
src/napari_sediment/data/: synthetic.py
src/napari_sediment/data_structures/: spectralindex.py
src/napari_sediment/parameters/: parameters.py  parameters_endmembers.py  parameters_plots.py
src/napari_sediment/utilities/: _reader.py  batch_preproc.py  io.py  morecolormaps.py  sediproc.py  spectralindex_compute.py  spectralplot.py
src/napari_sediment/widget_utilities/: classifier.py  rgb_widget.py
src/napari_sediment/widgets/: __init__.py  batch_preproc_widget.py  channel_widget.py  concatenation_widget.py  hyperanalysis_widget.py  mlwidget.py  rgb_widget.py  sediment_widget.py  spectral_indices_widget.py
